# arav-research

./: .gitignore  Installation_Instructions.md  README.md  Required Libraries ROS RP  raspberry_partition.md
calib/: CMakeLists.txt  package.xml
calib/code/: cameraCalibration  cameraCalibration.cpp
calib/data/: move.sh
calib/launch/: launch.xml
calib/output/: del.sh
camera/: CMakeLists.txt  package.xml
camera/code/: camera.py
camera/launch/: launch.xml
control/: CMakeLists.txt  package.xml
control/code/: control.py
control/launch/: launch.xml
control/utils/: publish.py  publish_aerial.py
epm/: CMakeLists.txt  package.xml
epm/code/: AI-Filter.py  EPMnode  EPMnode.cpp
epm/data/: calibrationData.yml
epm/launch/: launch.xml
epm/model/variables/: variables.data-00000-of-00001  variables.index
epm/output/: del.sh
octomap_mapping/octomap_server/launch/: launch.xml  octomap_mapping.launch
octomap_mapping/octomap_server/src/: OctomapServer.cpp
path_planning/: CMakeLists.txt  package.xml
path_planning/code/: path_planning_node  path_planning_node.cpp
path_planning/launch/: launch.xml
path_selector/: CMakeLists.txt  package.xml
path_selector/code/: selector.py
path_selector/launch/: launch.xml
simulator/: CMakeLists.txt  package.xml
simulator/control/: params.yaml
simulator/launch/: launch.xml
simulator/model/: control.xml  flight.xml  macros.xml  main.xml  params.xml  sensors.xml
simulator/rviz/: config.rviz
simulator/visual/: client.py  client.xml  visual.xml
simulator/visual/output/: del.sh
simulator/worlds/: calibration.world  depth.world
simulator/worlds/models/: copy.sh
simulator/worlds/models/chessActor/: chessActor.sdf  model.config
simulator/worlds/models/chessBoard/: model.config
simulator/worlds/models/hatchback_red/: model.sdf
