
# ---------------------------------------------------------------------------- #
# --------------------------- Camera Module ------- ARAV --------------------- #
# ---------------------------------------------------------------------------- #
# ------------------------- Author : Joan Bessa Sanz ------------------------- #
# ------------- E-mail : joan.bessa-sanz@student.isae-supaero.fr ------------- #
# ------------ (c) Copyright 2022. Joan Bessa. All Rights Reserved ----------- #
# ---------------------------------------------------------------------------- #

cmake_minimum_required(VERSION 3.0.2)
project(camera)
find_package(catkin REQUIRED COMPONENTS
  cv_bridge
  rospy
  sensor_msgs
  std_msgs
)
include_directories(include ${catkin_INCLUDE_DIRS})


# ---------------------------------------------------------------------------- #
# --------------------------- Camera Module ------- ARAV --------------------- #
# ---------------------------------------------------------------------------- #
# ------------------------- Author : Joan Bessa Sanz ------------------------- #
# ------------- E-mail : joan.bessa-sanz@student.isae-supaero.fr ------------- #
# ------------ (c) Copyright 2022. Joan Bessa. All Rights Reserved ----------- #
# ---------------------------------------------------------------------------- #