<?xml version="1.0"?>

<!-- ############################################################################ 
     #################### Path Planning Module (EPM) - ARAV ##################### 
     ############################################################################
     ######################### Author : Joan Bessa Sanz ######################### 
     ######## E-mail : joan.bessa-sanz@student.isae-supaero.fr ################## 
     ########### (c) Copyright 2021. Joan Bessa. All Rights Reserved ############  
     ############################################################################ -->
     
<package format="2">

  <name>path_planning</name>
  <version>1.0.0</version>
  <description>The path planning module of ARAV</description>
  <maintainer email="joan.bessa-sanz@student.isae-supaero.fr">Joan Bessa</maintainer>
  <license>(c) Copyright 2021. Joan Bessa. All Rights Reserved</license>
  <url type="repository">https://github.com/JoanBessa/ARAV.git</url>
  <author email="joan.bessa-sanz@student.isae-supaero.fr">Joan Bessa</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  
  <build_depend>ompl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  

  <build_export_depend>octomap_msgs</build_export_depend>
  <build_export_depend>octomap_ros</build_export_depend>
  
  <build_export_depend>ompl</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
    
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  
  <exec_depend>ompl</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
 </package>

<!-- ############################################################################ 
     #################### Path Planning Module (EPM) - ARAV ##################### 
     ############################################################################
     ######################### Author : Joan Bessa Sanz ######################### 
     ######## E-mail : joan.bessa-sanz@student.isae-supaero.fr ################## 
     ########### (c) Copyright 2021. Joan Bessa. All Rights Reserved ############  
     ############################################################################ -->
