
# ---------------------------------------------------------------------------- #
# -------------------- Path Selector Module ------- ARAV --------------------- #
# ---------------------------------------------------------------------------- #
# ------------------------- Author : Joan Bessa Sanz ------------------------- #
# ------------- E-mail : joan.bessa-sanz@student.isae-supaero.fr ------------- #
# ------------ (c) Copyright 2022. Joan Bessa. All Rights Reserved ----------- #
# ---------------------------------------------------------------------------- #

cmake_minimum_required (VERSION 3.0.2)
project (path_selector)
find_package (
  catkin REQUIRED
  std_msgs
  rospy 
)
include_directories (include ${catkin_INCLUDE_DIRS})

# ---------------------------------------------------------------------------- #
# -------------------- Path Selector Module ------- ARAV --------------------- #
# ---------------------------------------------------------------------------- #
# ------------------------- Author : Joan Bessa Sanz ------------------------- #
# ------------- E-mail : joan.bessa-sanz@student.isae-supaero.fr ------------- #
# ------------ (c) Copyright 2022. Joan Bessa. All Rights Reserved ----------- #
# ---------------------------------------------------------------------------- #

