<?xml version="1.0"?>

<!-- ############################################################################ 
     #################### Path Selector Module - ARAV ########################### 
     ############################################################################
     ######################### Author : Joan Bessa Sanz ######################### 
     ######## E-mail : joan.bessa-sanz@student.isae-supaero.fr ################## 
     ########### (c) Copyright 2022. Joan Bessa. All Rights Reserved ############  
     ############################################################################ -->
     
<package format="2">

  <name>path_selector</name>
  <version>1.0.0</version>
  <description>The path selector module of ARAV</description>
  <maintainer email="joan.bessa-sanz@student.isae-supaero.fr">Joan Bessa</maintainer>
  <license>(c) Copyright 2022. Joan Bessa. All Rights Reserved</license>
  <url type="repository">https://github.com/JoanBessa/ARAV.git</url>
  <author email="joan.bessa-sanz@student.isae-supaero.fr">Joan Bessa</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

 </package>

<!-- ############################################################################ 
     #################### Path Selector Module - ARAV ########################### 
     ############################################################################
     ######################### Author : Joan Bessa Sanz ######################### 
     ######## E-mail : joan.bessa-sanz@student.isae-supaero.fr ################## 
     ########### (c) Copyright 2022. Joan Bessa. All Rights Reserved ############  
     ############################################################################ -->